# ANTARESS

./: .gitignore  .gitlab-ci.yml  ANTARESS_all_routines.py  ANTARESS_joined_routines.py  ANTARESS_launcher.py  ANTARESS_main.py  ANTARESS_notebook.ipynb  ANTARESS_plot_settings.py  ANTARESS_plots.py  ANTARESS_post_proc.py  ANTARESS_routines.py  ANTARESS_settings.py  ANTARESS_settings_mercier.py  ANTARESS_sp_reduc.py  ANTARESS_systems.py  LICENSE  MANIFEST.in  README.md  __info__.py  antaress_env.yml  constant_data.py  gitlab-ci.yml  minim_routines.py  pyproject.toml  setup.py  utils.py  utils_plots.py
ANTARESS_analysis/: ANTARESS_ana_comm.py  ANTARESS_inst_resp.py  ANTARESS_joined_atm.py  ANTARESS_joined_star.py  ANTARESS_line_prop.py  ANTARESS_model_prof.py
ANTARESS_grids/: ANTARESS_plocc_grid.py  ANTARESS_prof_grid.py  ANTARESS_spots.py  ANTARESS_star_grid.py
ANTARESS_joined_analysis/: ANTARESS_joined_atm.py  ANTARESS_joined_comm.py  ANTARESS_joined_star.py
ANTARESS_masks/: ANTARESS_masks_gen.py
ANTARESS_masks/KitCat/: KitCat_main.py  Kitcat_functions.py
ANTARESS_plots/: ANTARESS_plot_settings.py  ANTARESS_plots_all.py  utils_plots.py
ANTARESS_routines/: ANTARESS_binning.py  ANTARESS_calib.py  ANTARESS_conversions.py  ANTARESS_data_align.py  ANTARESS_data_process.py  ANTARESS_detrend.py  ANTARESS_orbit.py  ANTARESS_plocc_def.py  ANTARESS_plocc_spec.py  ANTARESS_sp_cont.py
ANTARESS_spectral_corrections/: ANTARESS_flux_balance.py  ANTARESS_interferences.py  ANTARESS_peaks.py  ANTARESS_sp_reduc.py  ANTARESS_tellurics.py
ANTARESS_spectral_corrections/Telluric_processing/: Create_static_files.py
Docs/: Make_doc  Make_doc_git
Docs/source/: conf.py  (+13 more)
KitCat/: KitCat_main.py  Kitcat_classes.py  Kitcat_functions.py  calculate_RV_line_by_line_Bouchy.c  setup_lbl_fit.py
Method/: ANTARESS_launcher.py  ANTARESS_main.py  ANTARESS_settings.py  ANTARESS_settings_mercier.py  ANTARESS_systems.py  ANTARESS_systems_mercier.py  __info__.py  __info__.py   utils.py
Notebooks/: ANTARESS_nbook_RMR-spots.ipynb  ANTARESS_nbook_RMR.ipynb  ANTARESS_nbook_RMR_TOI178.ipynb  ANTARESS_nbook_bground.py  ANTARESS_nbook_detrending.ipynb  ANTARESS_nbook_mock-spots.ipynb  ANTARESS_nbook_mock.ipynb  ANTARESS_nbook_mock_TOI178.ipynb  ANTARESS_nbook_processing.ipynb  ANTARESS_nbook_resolution_maps.ipynb  ANTARESS_nbook_setup.ipynb  ANTARESS_nbook_setup_Arda.ipynb  ANTARESS_nbook_sp_red.ipynb  ESPRESSO_new_G9.fits
Ongoing/: ANTARESS_plot_settings_mercier.py  ANTARESS_settings_mercier.py  ANTARESS_systems_mercier.py
Telluric_processing/: Create_static_files.py
(+700 files in other folders)
