[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linmarg"
version = "0.1.1"
authors = [
  { name = "Jean-Baptiste Delisle", email = "jean-baptiste.delisle@unige.ch" },
]
description = "Linear parameters marginalizer"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
]
dependencies = ["numpy", "scipy"]

[project.urls]
Homepage = "https://gitlab.unige.ch/delisle/linmarg"
Issues = "https://gitlab.unige.ch/delisle/linmarg/-/issues"
